Add text for monolith architectur

--- a/references.bib
+++ b/references.bib
@@ -371,3 +371,71 @@ systems of systems.},
 	note = {Library Catalog: tools.ietf.org},
 	file = {Snapshot:/Users/eddie/Zotero/storage/RRRGTSIC/rfc2616.html:text/html}
 }
+
+@inreference{duden_nodate,
+	title = {Duden {\textbar} Monolith {\textbar} Rechtschreibung, Bedeutung, Definition, Herkunft},
+	url = {https://www.duden.de/rechtschreibung/Monolith},
+	shorttitle = {Duden Monolith},
+	abstract = {Definition, Rechtschreibung, Synonyme und Grammatik von 'Monolith' auf Duden online nachschlagen. Wörterbuch der deutschen Sprache.},
+	urldate = {2020-05-16},
+	langid = {german},
+	note = {Library Catalog: www.duden.de},
+	file = {Snapshot:/Users/eddie/Zotero/storage/NHNRLYDS/Monolith.html:text/html}
+}
+
+@inreference{dwds_nodate,
+	title = {{DWDS} – Digitales Wörterbuch der deutschen Sprache},
+	url = {https://www.dwds.de/wb/Monolith},
+	abstract = {Monolith – Schreibung, Definition, Bedeutung, Synonyme, Beispiele im {DWDS}},
+	booktitle = {{DWDS}},
+	urldate = {2020-05-16},
+	langid = {german},
+	note = {Library Catalog: www.dwds.de},
+	file = {Snapshot:/Users/eddie/Zotero/storage/7T57HCZM/Monolith.html:text/html}
+}
+@book{stephens_beginning_2015,
+	title = {Beginning Software Engineering},
+	isbn = {978-1-118-96916-8},
+	abstract = {A complete introduction to building robust and reliable {softwareBeginning} Software Engineering demystifies the software engineering methodologies and techniques that professional developers use to design and build robust, efficient, and consistently reliable software. Free of jargon and assuming no previous programming, development, or management experience, this accessible guide explains important concepts and techniques that can be applied to any programming language. Each chapter ends with exercises that let you test your understanding and help you elaborate on the chapter's main concepts. Everything you need to understand waterfall, Sashimi, agile, {RAD}, Scrum, Kanban, Extreme Programming, and many other development models is inside!  Describes in plain English what software engineering is Explains the roles and responsibilities of team members working on a software engineering project Outlines key phases that any software engineering effort must handle to produce applications that are powerful and dependable Details the most popular software development methodologies and explains the different ways they handle critical development tasks Incorporates exercises that expand upon each chapter's main ideas Includes an extensive glossary of software engineering terms},
+	pagetotal = {482},
+	publisher = {John Wiley \& Sons},
+	author = {Stephens, Rod},
+	date = {2015-03-02},
+	langid = {english},
+	note = {Google-Books-{ID}: {SyHWBgAAQBAJ}},
+	keywords = {Computers / Software Development \& Engineering / General, Computers / Programming / General}
+}
+
+@inreference{synchrone_2018,
+	title = {Synchrone Kommunikation},
+	rights = {Creative Commons Attribution-{ShareAlike} License},
+	url = {https://de.wikipedia.org/w/index.php?title=Synchrone_Kommunikation&oldid=182185824},
+	abstract = {Unter synchroner Kommunikation versteht man in der Informatik und Netzwerktechnik einen Modus der Kommunikation, bei dem die Kommunikationspartner (Prozesse) beim Senden oder beim Empfangen von Daten immer synchronisieren, also warten (blockieren), bis die Kommunikation abgeschlossen ist. Wird sowohl beim Senden als auch beim Empfangen gewartet (der Sender stellt also eine Anfrage und wartet auf Antwort), so entspricht das einem Rendezvous der beiden beteiligten Prozesse.
+Das Blockieren des Prozesses wird intern durch geeignete Mechanismen zur Prozesssynchronisation erreicht. Damit geht die Synchronisierung über die reine Transaktionsorientierung hinaus. Das Senden und Empfangen von Daten ohne Blockieren des Prozesses bezeichnet man als Asynchrone Kommunikation. Auch diese lässt einen transaktionsorientierten Betrieb zu.
+Die synchrone Kommunikation sollte nicht mit dem Begriff der synchronen Datenübertragung verwechselt werden, der sich auf Medienzugriffsverfahren bezieht.},
+	booktitle = {Wikipedia},
+	urldate = {2020-05-16},
+	date = {2018-10-27},
+	langid = {german},
+	note = {Page Version {ID}: 182185824},
+	file = {Snapshot:/Users/eddie/Zotero/storage/VQB3GTAU/index.html:text/html}
+}
+
+@inreference{wiki_asynchrone_2019,
+	title = {Asynchrone Kommunikation},
+	rights = {Creative Commons Attribution-{ShareAlike} License},
+	url = {https://de.wikipedia.org/w/index.php?title=Asynchrone_Kommunikation&oldid=187692564},
+	abstract = {Unter asynchroner Kommunikation versteht man in der Informatik und Netzwerktechnik einen Modus der Kommunikation, bei dem das Senden und Empfangen von Daten zeitlich versetzt und ohne Blockieren des Prozesses durch bspw. Warten auf die Antwort des Empfängers (wie bei synchroner Kommunikation der Fall) stattfindet.
+Die asynchrone Kommunikation ist nicht zu verwechseln mit dem Begriff asynchrone Datenübertragung; dieser bezieht sich auf Medienzugriffsverfahren.
+Beispiele für asynchrone Kommunikation zwischen Menschen sind 
+
+E-Mail und {SMS}-Konversationen,
+Newsletter oder Mailing-Listen sowie
+Einträge in Diskussionsforen bzw. Newsgroups.Viele Groupwaresysteme verfügen über proprietäre Dienste zum Versenden und Empfangen von Nachrichten.},
+	booktitle = {Wikipedia},
+	urldate = {2020-05-16},
+	date = {2019-04-18},
+	langid = {german},
+	note = {Page Version {ID}: 187692564},
+	file = {Snapshot:/Users/eddie/Zotero/storage/LISGY6EW/index.html:text/html}
+}
