Add literaturnachweis fuer Einordnung vom System

--- a/sections/Einleitung.tex
+++ b/sections/Einleitung.tex
@@ -10,9 +10,7 @@ Die Inhalte der Plattform werden von den zwei anderen Gründern gepflegt und ein
 
 \subsection{Problemstellung}
 
-Umgesetzt wurde die Plattform in Ruby on Rails\footnote{
-Ruby on Rails ist ein quellenoffenes Webframework, welches für die Programmiersprache Ruby entwickelt wurde \parencites{ruby_org}[vgl.][S. 24]{sieben_wochen}.
-} im Backend und React.js\footnotemark im Frontend. Dabei liefert das Backend auf Anfrage Inhalte an das Frontend und kümmert sich um die Speicherung von Daten. Das Frontend im Gegensatz fordert beim Laden der Webseite alle genötigten Informationen an und stellt sie anschließend dar. Trotz dieser Einteilung handelt es sich um eine Applikation mit gemeinsamer Codebase und einem Bereitstellungsprozess.
+Umgesetzt wurde die Plattform in Ruby on Rails im Backend und React.js\footnotemark im Frontend. Dabei liefert das Backend auf Anfrage Inhalte an das Frontend und kümmert sich um die Speicherung von Daten. Das Frontend im Gegensatz fordert beim Laden der Webseite alle genötigten Informationen an und stellt sie anschließend dar. Trotz dieser Einteilung handelt es sich um eine Applikation mit gemeinsamer Codebase und einem Bereitstellungsprozess.
 
 \footnotetext{
 React.js ist eine JavaScript Bibliothek zum Erstellen von Benutzeroberflächen. Diese verwaltet die Darstellung im HTML-DOM und ermöglicht dem Entwickler Informationen zwischen Funktionen zu administrieren \parencite{react_webpage}.
