Neue Korrektur von Marcel zum Abschnitt Einordnung des aktuellen Systems hinzugefuegt

--- a/sections/Theory/modellierungskonzept.tex
+++ b/sections/Theory/modellierungskonzept.tex
@@ -2,6 +2,12 @@
 
 In diesem Abschnitt möchte ich mehr auf die Mircoservice-Architektur eingehen. Dabei möchte ich die Perspektive des verteilten Systems mehr beleuchten und die Unternehmsstruktur mehr vordern. Es wäre daher glaube sinnvoll den Abschnitt mit der Conways Law dem anzustellen oder einzu bauen.
 
+\subsubsection{Cohesion und Coupling}
+
+In diesem Abschnitt möchte ich diese beiden Begriffe erklären und noch einmal den Zusammenhang zwischen Funktionlität hervorheben. Es soll klar werden wie Microservices geteilt werden und was es bedeutet Logig hinter definierten Schnitstellen zu verstecken.
+
+Abschließend zu diesem Abschnitt soll die dritte Bedingung für Microservices erstellt werden: \textbf{eine in teamsgeteilte, gemischte Unternehmensstruktur}
+
 \subsubsection{Conway's Law}
 
 Die Abhängigkeit der Kommunikationsstruktur im Unternehmen zur verwendeten Software Architektur.
@@ -20,8 +26,4 @@ Die Abhängigkeit der Kommunikationsstruktur im Unternehmen zur verwendeten Soft
 	\item Schlussfolgerung für PluraPolit
 \end{itemize}
 
-\subsubsection{Cohesion und Coupling}
-
-In diesem Abschnitt möchte ich diese beiden Begriffe erklären und noch einmal den Zusammenhang zwischen Funktionlität hervorheben. Es soll klar werden wie Microservices geteilt werden und was es bedeutet Logig hinter definierten Schnitstellen zu verstecken.
-
-Abschließend zu diesem Abschnitt soll die dritte Bedingung für Microservices erstellt werden: \textbf{eine in teamsgeteilte, gemischte Unternehmensstruktur}
+\subsubsection{Bounded Contexts}
