Korrektur von Interaktionsorientierten und Rest systemen.

--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,12 @@
 
 %Für Abbildungen
 \usepackage{graphicx}
+
+\usepackage{ragged2e}
+\usepackage[format=plain,
+      justification=RaggedRight,
+      singlelinecheck=false]
+     {caption}
   
 % Inhaltsverwaltung wird eingefügt
 \usepackage[style=authortitle, citestyle=authoryear]{biblatex}
